[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Minigame_end.gd" type="Script" id=1]
[ext_resource path="res://Images/Character_Standing.png" type="Texture" id=2]
[ext_resource path="res://Images/win.jpg" type="Texture" id=3]
[ext_resource path="res://Images/lose.png" type="Texture" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Character_Standing" type="Sprite" parent="Node2D"]
position = Vector2( 20, 115 )
texture = ExtResource( 2 )

[node name="icon_panel" type="RichTextLabel" parent="Node2D"]
anchor_left = -0.00416192
anchor_top = -0.00234112
anchor_right = -0.00416192
anchor_bottom = -0.00234112
margin_right = 90.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="win" type="Sprite" parent="Node2D/icon_panel"]
visible = false
position = Vector2( 45, 12 )
scale = Vector2( 0.0201389, 0.0194444 )
texture = ExtResource( 3 )

[node name="lose" type="Sprite" parent="Node2D/icon_panel"]
visible = false
position = Vector2( 45, 12 )
scale = Vector2( 0.0852713, 0.0871795 )
texture = ExtResource( 4 )

[node name="status_panel" type="RichTextLabel" parent="Node2D"]
margin_left = -0.374573
margin_top = 135.625
margin_right = 89.6254
margin_bottom = 159.625
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life" type="Label" parent="Node2D/status_panel"]
margin_right = 46.0
margin_bottom = 16.0
text = "Life:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sanity" type="Label" parent="Node2D/status_panel"]
margin_left = 0.374573
margin_top = 9.375
margin_right = 46.3746
margin_bottom = 25.375
text = "Sanity:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="money" type="Label" parent="Node2D/status_panel"]
margin_left = 52.3746
margin_top = 4.37457
margin_right = 87.3746
margin_bottom = 20.3746
text = "$: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 14.0
margin_top = 73.0
margin_right = 77.0
margin_bottom = 81.0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
